syntax = "proto3";

option go_package = "github.com/zenvisjr/building-scalable-microservices/account/pb;pb";

service AccountService {
	rpc PostAccount (PostAccountRequest) returns (PostAccountResponse);
    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
    rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse);
    rpc GetEmail(GetEmailRequest) returns (GetEmailResponse);
    rpc GetEmailForAuth (GetEmailForAuthRequest) returns (GetEmailForAuthResponse);
    rpc IncrementTokenVersion (IncrementTokenVersionRequest) returns (IncrementTokenVersionResponse);
    rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
    rpc DeactivateAccount (UpdateAccountRequest) returns (UpdateAccountResponse);
    rpc ReactivateAccount (UpdateAccountRequest) returns (UpdateAccountResponse);
    rpc DeleteAccount (UpdateAccountRequest) returns (UpdateAccountResponse);
}

message Account {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 5;
    int32 token_version = 6;
    bool is_active = 7;
}

message PostAccountRequest {
    string name = 1;
    string email = 2;
    string password_hash = 3;
    string role = 4;
}

message PostAccountResponse {
    Account account = 1;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountResponse {
    Account account = 1;
}

message GetAccountsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}

message GetEmailRequest {
    string name = 1;
}

message GetEmailResponse {
    string email = 1;
}

message GetEmailForAuthRequest {
    string email = 1;
}
message GetEmailForAuthResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string password_hash = 4;
    string role = 5;
    int32 token_version = 6;
    bool is_active = 7;
}

message IncrementTokenVersionRequest {
    string user_id = 1;
}
message IncrementTokenVersionResponse {
    bool ok = 1;
}

message UpdatePasswordRequest {
    string email = 1;
    string password = 2;
}
message UpdatePasswordResponse {
    bool ok = 1;
}

message UpdateAccountRequest {
    string user_id = 1;
}
message UpdateAccountResponse {
    bool ok = 1;
}

