syntax = "proto3";

option go_package = "github.com/zenvisjr/building-scalable-microservices/auth/pb;pb";

package auth;

service AuthService {
  rpc Signup(SignupRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshRequest) returns (AuthResponse);
  rpc Verify(VerifyRequest) returns (VerifyResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message SignupRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4; // typically "user" or "admin"
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string user_id = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
  string email = 4;
  string role = 5;
}

message VerifyRequest {
  string access_token = 1;
}

message VerifyResponse {
  string user_id = 1;
  string email = 2;
  string role = 3;
}

message LogoutRequest {
  string user_id = 1;
}

message LogoutResponse {
  string message = 1;
}